syntax = "proto3";

package api.system.v1;

import "validate/validate.proto";

option go_package = "kratosx-fashion/api/system/v1;v1";
option java_multiple_files = true;
option java_package = "api.system.v1";

message EmptyRequest {
}

message RegisterRequest {
  string username = 1 [(validate.rules).string.pattern = "^[a-zA-Z][a-zA-Z0-9_]{4,15}$"];
  string password = 2 [(validate.rules).string.pattern = "^[a-zA-Z]\\w{5,17}$"];
  string email = 3 [(validate.rules).string.email = true];
  string phone = 4 [(validate.rules).string = {
    pattern:   "^1(3|4|5|6|7|8|9)\\d{9}$",
    max_len: 11,
  }];
  string captcha = 5 [(validate.rules).string.max_len = 6];
  string captcha_id = 6;
}

message RetrieveRequest {
  string username = 1 [(validate.rules).string.pattern = "^[a-zA-Z][a-zA-Z0-9_]{4,15}$"];
  string captcha = 2  [(validate.rules).string.max_len = 6];
  string captcha_id = 3;
}

message LoginRequest {
  string username = 1 [(validate.rules).string.pattern = "^[a-zA-Z][a-zA-Z0-9_]{4,15}$"];
  string password = 2 [(validate.rules).string.pattern = "^[a-zA-Z]\\w{5,17}$"];
  string captcha = 3 [(validate.rules).string.max_len = 6];
  string captcha_id = 4;
}

message UserRequest {
  string username = 1 [(validate.rules).string.pattern = "^[a-zA-Z][a-zA-Z0-9_]{4,15}$"];
  string password = 2 [(validate.rules).string.pattern = "^[a-zA-Z]\\w{5,17}$"];
  string avatar = 3;
  string email = 4 [(validate.rules).string.email = true];
  string phone = 5 [(validate.rules).string = {
    pattern:   "^1(3|4|5|6|7|8|9)\\d{9}$",
    max_len: 11,
  }];
  string nickname = 6;
  uint32 status = 7 ;
  repeated UserRoleID user_roles = 8;
}

message IDRequest {
  string id = 1;
}

message PasswordRequest {
  string id = 1;
  string old_password = 2;
  string new_password = 3;
}

message ListRequest {
  uint32 page_num = 1;
  uint32 page_size = 2 [(validate.rules).uint32.lte = 50];
  repeated QueryOption options = 3;
}

message RoleRequest {
  string id = 1;
  string name = 2;
  uint32 sort = 3;
  uint32 status = 4;
  uint32 hidden = 5;
  string description = 6;
  string creator_id = 7;
  repeated RoleMenu role_menus = 8;
}

message MenuRequest {
  string id = 1;
  string parent_id = 2;
  string router = 3;
  string name = 4;
  string component = 5;
  uint32 hidden = 6;
  uint32 keepalive = 7;
  uint32 sort = 8;
  uint32 status = 9;
  string icon = 10;
  string description = 11;
  repeated MenuAction actions = 12;
}

message TreeRequest {
  uint32 page_num = 1;
  uint32 page_size = 2;
  uint32 status = 3;
  string name = 4;
  string parent_id = 5;
  repeated QueryOption options = 6;
}

message EmptyReply {
}

message IDReply {
  string id = 1;
}

message CaptchaReply {
  string captcha_id = 1;
  string pic_path = 2;
}

message UserReply {
  string id = 1;
  string username = 2;
  string avatar = 3;
  string email = 4;
  string mobile = 5;
  string nickname = 6;
  uint32 status = 7;
  string created_at = 8;
  string updated_at = 9;
  repeated UserRole user_roles = 10;
}

message ListUserReply {
  repeated UserReply users = 1;
  uint32 total = 2;
}

message RoleReply {
  string id = 1;
  string name = 2;
  string sort = 3;
  string status = 4;
  string description = 5;
  string creator_id = 6;
  string created_at = 7;
  string updated_at = 8;
  repeated RoleMenu role_menus = 9;
}

message ListRoleReply {
  repeated RoleReply users = 1;
  uint32 total = 2;
}

message MenuReply {
  string id = 1;
  string parent_id = 2;
  string path = 3;
  string name = 4;
  uint32 hidden = 5;
  string component = 6;
  uint32 sort = 7;
  uint32 status = 8;
  string icon = 9;
  string creator_id = 10;
  string created_at = 11;
  string updated_at = 12;
  repeated MenuAction actions = 13;
}

message ListMenuReply {
  repeated MenuReply users = 1;
  uint32 total = 2;
}

message RegisterReply {
  TokenData token = 1;
  string user_id = 2;
  string username = 3;
}

message LoginReply {
  TokenData token = 1;
  string user_id = 2;
  string username = 3;
}

message MenuTreeReply {
  string id = 1;
  string parent_id = 2;
  string path = 3;
  string name = 4;
  string component = 5;
  uint32 hidden = 6;
  uint32 sort = 7;
  uint32 status = 8;
  string icon = 9;
  repeated MenuAction actions = 10;
  repeated MenuTreeReply children = 11;
}

message UserRoleID{
  string id = 1;
  string user_id = 2;
  string role_id = 3;
}

message UserRole{
  string id = 1;
  string name = 2;
  string sort = 3;
  string status = 4;
  string description = 5;
  string creator_id = 6;
  string created_at = 7;
  string updated_at = 8;
  repeated RoleMenu role_menus = 9;
}

message RoleMenu{
  string id = 1;
  string role_id = 2;
  string menu_id = 3;
  string action_id = 4;
}

message TokenData {
  string access_token = 1;
  int64 expires_in = 2;
  string token_type = 3;
}

message QueryOption {
  string keyword = 1;
  string column = 2;
  bool sort = 3;
}

message MenuAction{
  string id = 1;
  string menu_id = 2;
  string name = 3;
  repeated MenuActionResource resources = 4;
}

message MenuActionResource{
  string id = 1;
  string action_id = 2;
  string method = 3;
  string path = 4;
}